# minilib

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/components/: App.js
frontend/static/frontend/: main.js
minilib/: asgi.py  settings.py  urls.py  wsgi.py
oak/: admin.py  apps.py  models.py  urls.py  views.py
oak/migrations/: 0001_initial.py  0002_auto_20200606_1509.py
oak/serializers/: __init__.py  book.py
oak/views/: __init__.py  book.py
utils/: booksapi.py
