[tool.poetry]
name = "minilib"
version = "0.1.0"
description = "Home Library Catalog"
authors = ["suavesav <savinay.ng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.0"
djangorestframework = "3.11.0"
google-api-python-client = "1.8.3"

[tool.poetry.dev-dependencies]
tox = "^3.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
